--- a/layout/casper/footer.ejs
+++ b/layout/casper/footer.ejs
@@ -33,17 +33,17 @@
     <div class="social">
       <ul>
         <% if(theme.GitHub){ %>
-          <li><a href="<%- theme.GitHub %>" title="Github" target="_blank"><i class="icon-Popular_GitHub"></i>&nbsp;</a></li>
+          <li><a href="<%- theme.GitHub %>" title="Github" target="_blank" rel="nofollow noopener noreferrer"><i class="icon-Popular_GitHub"></i>&nbsp;</a></li>
         <% } %>
         <li class="weixin"><a href="javascript:void(0)" title="Weixin"><i class="icon-CN_tencent_wechat"></i>&nbsp;</a></li>
         <% if(theme.Weibo){ %>
-          <li><a href="<%- theme.Weibo %>" title="Sina-Weibo" target="_blank"><i class="icon-CN_sina_weibo"></i>&nbsp;</a></li>
+          <li><a href="<%- theme.Weibo %>" title="Sina-Weibo" target="_blank" rel="nofollow noopener noreferrer"><i class="icon-CN_sina_weibo"></i>&nbsp;</a></li>
         <% } %>
         <% if(theme.Twitter){ %>
-          <li><a href="<%- theme.Twitter %>" title="Twitter" target="_blank"><i class="icon-Popular_Twitter"></i>&nbsp;</a></li>
+          <li><a href="<%- theme.Twitter %>" title="Twitter" target="_blank" rel="nofollow noopener noreferrer"><i class="icon-Popular_Twitter"></i>&nbsp;</a></li>
         <% } %>
         <% if(theme.ZhiHu){ %>
-          <li><a href="http://www.zhihu.com/people/yangzj1992" title="Zhihu" target="_blank"><i class="icon-CN_zhihu"></i></a>&nbsp;</li>
+          <li><a href="http://www.zhihu.com/people/yangzj1992" title="Zhihu" target="_blank" rel="nofollow noopener noreferrer"><i class="icon-CN_zhihu"></i></a>&nbsp;</li>
         <% } %>
       </ul>
       <div class="search">
