--- a/layout/casper/categories.ejs
+++ b/layout/casper/categories.ejs
@@ -28,9 +28,9 @@ title = "目录";
             <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 wow fadeInUp" data-wow-delay="0.3s">
               <% if (item.link){ %>
                 <% if (item.title){ %>
-                  <h4 class="title link"><a href="<%- item.link %>" target="_blank"><%= item.title %></a></h4>
+                  <h4 class="title link"><a href="<%- item.link %>" target="_blank" rel="nofollow noopener noreferrer"><%= item.title %></a></h4>
                 <% } else { %>
-                  <h4 class="title link"><a href="<%- item.link %>" target="_blank"><%= item.link %></a></h4>
+                  <h4 class="title link"><a href="<%- item.link %>" target="_blank" rel="nofollow noopener noreferrer"><%= item.link %></a></h4>
                 <% } %>
               <% } else { %>
                 <h4 class="title"><a href="<%- config.root %><%- item.path %>"><%= item.title %></a></h4>
