--- a/layout/casper/post/duoshuo.ejs
+++ b/layout/casper/post/duoshuo.ejs
@@ -1,3 +1,4 @@
+<p class="disqus-error" style="padding-top: 40px;">本博客采用 Disqus 作为评论解决方案，目前 Disqus 经常被 GFW 封锁，若想参与评论请翻墙访问本站或将 disqus.com 添加至翻墙白名单。你也可以通过导航栏上的社交网站与我联系</p>
 <div id="disqus_thread"></div>
 <script>
   (function() {  
@@ -5,6 +6,9 @@
     s.src = '//<%= theme.disqus_shortname %>.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
+    s.onload = function (){
+      $('.disqus-error').hide();
+    } 
   })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
