--- a/layout/casper/about.ejs
+++ b/layout/casper/about.ejs
@@ -14,6 +14,7 @@
       <%- post.content %>
       <div class="clearfix"></div>
     </div>
+    <div class="clearfix"></div>
     <%- partial('post/navigation') %>
     <div class="duoshuo"><%- partial('post/duoshuo') %></div>
   </div>
