--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -17,7 +17,7 @@
   <% } else { %>
   <body class="post-template">
   <% } %>-->
-  <body id="index" class="lightnav animsition">
+  <body id="index" class="lightnav">
     <%- partial('casper/header') %>
     <%- body %>
     <%- partial('casper/footer') %>
