feat: css seperation

--- a/source/scss/_basic-color.scss
+++ b/source/scss/_basic-color.scss
@@ -87,7 +87,7 @@ $ForestGreen  :#228B22;   //森林绿
 $Green  :#008000;   //纯绿
 $DarkGreen  :#006400;   //暗绿色
 $Chartreuse  :#7FFF00;   //黄绿色(查特酒绿)
-$LawnGreen  :#7CFC00;   //草绿色(草坪绿_
+$LawnGreen  :#7CFC00;   //草绿色(草坪绿)
 $GreenYellow  :#ADFF2F;   //绿黄色
 $DarkOliveGreen  :#556B2F;   //暗橄榄绿
 $YellowGreen  :#9ACD32;   //黄绿色
@@ -152,3 +152,4 @@ $DarkGray  :#A9A9A9;   //深灰色
 $Gray  :#808080;   //灰色
 $DimGray  :#696969;   //暗淡的灰色
 $Black  :#000000;   //纯黑   
+$GithubBlue : #4078c0;  // Github蓝
