--- a/source/css/all.styl
+++ b/source/css/all.styl
@@ -1,8 +1,7 @@
 @import 'bootstrap.min.css'
-@import 'animsition.min.css'
 @import 'slidebars.min.css'
 
-@import 'style.min.css'
+@import 'index.min.css'
 @import 'syntax'
 @import 'NVicons.css'
 @import 'fontello.css'
