feat: css modify

--- a/layout/casper/about.ejs
+++ b/layout/casper/about.ejs
@@ -1,5 +1,5 @@
 <% permalink = config.url + config.root + post.path %>
-<section id="intro">
+<section id="intro" class="intro">
   <div class="container about-content">
     <div class="col-md-8 col-md-offset-2">
       <h2 style="text-align:center;"><%- post.title %></h2>
