--- a/layout/casper/archive.ejs
+++ b/layout/casper/archive.ejs
@@ -65,7 +65,7 @@ if(page.archive) {
     </div>
   </section> 
 <% } %>
-<section id="statement">
+<section id="statement" class="statement">
   <div class="container text-center wow fadeInUp" data-wow-delay="0.5s">
     <div class="row">
       <p><%- theme.bottom_saying %></p>
