--- a/layout/casper/header.ejs
+++ b/layout/casper/header.ejs
@@ -71,7 +71,7 @@
 
 <!-- ============================ #sb-site Main Page Wrapper =========================== -->
 
-<div id="sb-site">
+<div id="sb-site" class="sb-site">
   <!-- #sb-site - All page content should be contained within this id, except the off-canvas navigation itself -->
 
   <!-- ============================ Header & Logo bar =========================== -->
