--- a/layout/casper/index.ejs
+++ b/layout/casper/index.ejs
@@ -2,7 +2,7 @@
 <!-- Height spacing helper -->
 <div class="heightblock"></div>
 <!-- // End height spacing helper -->
-<section id="intro" class="index-context">
+<section id="intro" class="index-context intro">
   <div class="container">
     <% page.posts.each(function(post) { %>
       <div class="row">
@@ -40,7 +40,7 @@
     </nav>
   </div>
 </section>
-<section id="statement">
+<section id="statement" class="statement">
   <div class="container text-center wow fadeInUp" data-wow-delay="0.5s">
     <div class="row">
       <p><%- theme.bottom_saying %></p>
