--- a/layout/casper/categories.ejs
+++ b/layout/casper/categories.ejs
@@ -48,7 +48,7 @@ title = "目录";
   </div>
 </section> 
 <% } %>
-<section id="statement">
+<section id="statement" class="statement">
   <div class="container text-center wow fadeInUp" data-wow-delay="0.5s">
     <div class="row">
       <p><%- theme.bottom_saying %></p>
