--- a/layout/casper/footer.ejs
+++ b/layout/casper/footer.ejs
@@ -47,10 +47,10 @@
         <% } %>
       </ul>
       <div class="search">
-        <form id="searchform" onsubmit="return dispatch()">
+        <form id="searchform" class="searchform" onsubmit="return dispatch()">
           <div class="search_text">
             <i class="demo-icon icon-search">&#xe816;</i>
-            <input type="text" name="q" id="searchbox" value="" placeholder="">
+            <input type="text" name="q" id="searchbox" class="searchbox" value="" placeholder="">
           </div>
         </form>
       </div>
