--- a/layout/casper/tags.ejs
+++ b/layout/casper/tags.ejs
@@ -54,7 +54,7 @@ title = "标签";
     </div>
   </section> 
 <% } %>
-<section id="statement">
+<section id="statement" class="statement">
   <div class="container text-center wow fadeInUp" data-wow-delay="0.5s">
     <div class="row">
       <p><%- theme.bottom_saying %></p>
