--- a/source/scss/header.scss
+++ b/source/scss/header.scss
@@ -1,13 +1,3 @@
-.navbar .nav > li > span {
-  font-family: $font-family-georgia;
-  font-style: italic;
-  margin-left: 4px;
-  margin-right: 3px;
-  text-transform: none;
-  position: relative;
-  top: -1px;
-}
-
 .navbar {
   position: fixed;
   top: 0;
@@ -20,21 +10,40 @@
     .welcome {
       cursor: pointer;
     }
-  }
 
-  .nav > li {
-    float: none;
-    display: inline-block;
-  }
+    > li {
+      float: none;
+      display: inline-block;
 
-  .nav > li > span,
-  .nav > li > a > i {
-    font-size: 12px;
-  }
+      > span {
+        font-family: $font-family-georgia;
+        font-style: italic;
+        margin-left: 4px;
+        margin-right: 3px;
+        text-transform: none;
+        position: relative;
+        top: -1px;
+      }
 
-  .nav > li a:hover,
-  .nav > li > a:focus {
-    background-color: transparent;
+      > a {
+        display: block;
+      }
+
+      > span,
+      > a > i {
+        font-size: 12px;
+      }
+
+      a:hover,
+      a:focus {
+        background-color: transparent;
+      }
+
+      &:last-child > a,
+      &:last-child {
+        border-right: none;
+      }
+    }
   }
 
   .nav > li > a,
@@ -47,15 +56,6 @@
     letter-spacing: 1px;
     text-shadow: none;
     border-right: 1px solid #aaa;
-  }
-
-  .nav > li > a {
-    display: block;
-  }
-
-  .nav > li:last-child > a,
-  .nav > li:last-child {
-    border-right: none;
   }
 }
 
@@ -90,11 +90,13 @@
     height: 60px;
   }
 
-  .navbar .nav > li {
-    display: none;
-  }
+  .navbar .nav {
+    .mobile-li {
+      display: inline-block;
+    }
 
-  .navbar .nav .mobile-li {
-    display: inline-block;
+    > li{
+      display: none;
+    }
   }
 }
