feat: links layout

--- a/source/scss/index.scss
+++ b/source/scss/index.scss
@@ -9,4 +9,6 @@
 @import "toc.scss";
 @import "homepage.scss";
 @import "post.scss";
-@import "archive.scss"
+@import "archive.scss";
+@import "projects.scss";
+
