--- a/source/scss/post.scss
+++ b/source/scss/post.scss
@@ -5,7 +5,7 @@
   h4,
   h5,
   h6 {
-    margin-top: 0;
+    margin-top: 20px;
     font-family: $font-family-open-sans;
     color: $NormalBlack;
   }
@@ -88,7 +88,7 @@
       display: block;
     }
     ol, ul{
-      padding-left: 0;
+      padding-left: 18px;
     }
   }
 }
