--- a/layout/casper/post.ejs
+++ b/layout/casper/post.ejs
@@ -31,7 +31,7 @@
             <span class="i-name">源码</span>
           </a>
           <i class="demo-icon icon-file-word">&#xe821;</i>
-          <span class="i-name post-words"><%-wordcount(post.content)%>字</span>
+          <span class="i-name post-words"><%= wordcount(post.content) %>字</span>
           <i class="demo-icon icon-tags">&#xe801;</i> 
           <span class="i-name"></span>
           <span class="post-meta">
