--- a/source/scss/global.scss
+++ b/source/scss/global.scss
@@ -350,7 +350,7 @@ input[placeholder],
     color: $NormalBlack;
     margin-bottom: 20px;
     display: inline-block;
-    padding: 14px;
+    padding: 14px 0;
   }
 
   p {
