feat: webfont & style change

--- a/layout/casper/footer.ejs
+++ b/layout/casper/footer.ejs
@@ -2,13 +2,13 @@
 <div class="control-panel">
   <ul>
     <li>
-      <i class="demo-icon icon-gotop">&#xe817;</i>
+      <i class="fa fa-arrow-up"></i>
     </li>
     <li>
-      <i class="demo-icon icon-godown">&#xe802;</i>
+      <i class="fa fa-arrow-down"></i>
     </li>
     <li>
-      <i class="demo-icon icon-music">&#xe814;</i>
+      <i class="fa fa-music"></i>
     </li>
   </ul>
 </div>
@@ -49,7 +49,7 @@
       <div class="search">
         <form id="searchform" class="searchform" onsubmit="return dispatch()">
           <div class="search_text">
-            <i class="demo-icon icon-search">&#xe816;</i>
+            <i class="fa fa-search"></i>
             <input type="text" name="q" id="searchbox" class="searchbox" value="" placeholder="">
           </div>
         </form>
