--- a/layout/casper/header.ejs
+++ b/layout/casper/header.ejs
@@ -1,7 +1,7 @@
 <!-- ============================ Off-canvas navigation =========================== -->
 <div class="sb-slidebar sb-right sb-style-overlay sb-momentum-scrolling">
   <div class="sb-close" aria-label="Close Menu" aria-hidden="true">
-    <i class="demo-icon icon-cancel-2">&#xe824;</i>
+    <i class="fa fa-close"></i>
   </div>
   <div class="site-overview">
     <div class="site-author">
