--- a/layout/links.ejs
+++ b/layout/links.ejs
@@ -5,7 +5,7 @@ title = "友链";
   <section id="services">
     <div class="container article-list">
       <div class="row" style="text-align: center;">
-        <h3 style="padding: 20px 0">欢迎联系留言交换友链，只希望你的博客能够偏技术向、有趣有物、时常更新即可。</h3>
+        <h3 style="padding: 20px 0">欢迎留言交换友链，希望你的博客能够偏技术向、有趣有物、时常更新即可。</h3>
         <div class="row projects">
           <% theme.friendlinks.forEach(function(item){ %>
             <div class="p-item">
