--- a/source/scss/footer.scss
+++ b/source/scss/footer.scss
@@ -56,7 +56,8 @@ footer {
     .searchform {
       margin-top: 20px;
 
-      .icon-search {
+      .fa-search {
+        position: absolute;
         color: #ccc;
         margin-top: 8px;
       }
