--- a/source/scss/slidebar.scss
+++ b/source/scss/slidebar.scss
@@ -69,7 +69,7 @@ html.sb-init.sb-active.sb-active-right .menu-icon .after {
   text-align: right;
   cursor: pointer;
 
-  .icon-cancel-2 {
+  .fa-close {
     color: #fff;
     padding: 10px 20px;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
