--- a/layout/casper/post.ejs
+++ b/layout/casper/post.ejs
@@ -14,6 +14,7 @@
           <time datetime="<%= date_xml(post.date) %>" itemprop="datePublished" class="post-time">
             <span>发布时间：<%= date(post.date,'YYYY 年 MM 月 DD 日') %></span>
             <span style="margin-left: 10px;">最近更新于：<%= date(post.updated,'YYYY 年 MM 月 DD 日') %></span>
+            <span style="margin-left: 10px;">本文共 <%= wordcount(post.content) %> 字，读完约 <%= min2read(post.content) %> 分钟</span>
           </time>
         </div>
       </div>
@@ -21,18 +22,18 @@
         <div class="post-article">
           <%- post.content %>
         </div>
-        <p class="post-copyright">本文版权归 yangzj1992 所有。商业转载请联系本人获得授权，非商业转载请注明出处。
+        <p class="post-copyright">本文版权归 yangzj1992 所有。来源青春样博客(qcyoung.com)，商业转载请联系本人获得授权，非商业转载请注明出处。
         </p>
         <div class="clearfix"></div>
         <hr class="nogutter">
         <div class="summary">
           <a class="code-article" href="https://github.com/yangzj1992/articles/blob/master/<%= post.slug %>.md" target="_blank" rel="nofollow noopener noreferrer">
-            <i class="demo-icon icon-file-code">&#xe800;</i>
+            <i class="fa fa-file-code-o"></i>
             <span class="i-name">源码</span>
           </a>
-          <i class="demo-icon icon-file-word">&#xe821;</i>
+          <i class="fa fa-file-word-o"></i>
           <span class="i-name post-words"><%= wordcount(post.content) %>字</span>
-          <i class="demo-icon icon-tags">&#xe801;</i> 
+          <i class="fa fa-tags"></i> 
           <span class="i-name"></span>
           <span class="post-meta">
             <% if (post.tags && post.tags.length){ %>
@@ -43,11 +44,15 @@
               <% }); %>
             <% } %>
           </span>
-          <i class="demo-icon icon-eye">&#xe803;</i> 
+          <i class="fa fa-eye"></i> 
           <span class="i-name">
             <span id="busuanzi_container_page_pv">
               <span id="busuanzi_value_page_pv"></span>次阅读
             </span>
+          </span>
+          <span class="reward">
+            <i class="fa fa-rmb"></i>
+            <span class="i-name post-words">打赏</span>
           </span>
           <span id="share" class="share-box">
             <div class="qrcode" id="qrcode"></div>
