feat: sidebar close & sw.js

--- a/layout/casper/header.ejs
+++ b/layout/casper/header.ejs
@@ -3,6 +3,7 @@
   <div class="sb-close" aria-label="Close Menu" aria-hidden="true">
     <i class="fa fa-close"></i>
   </div>
+  <div class="clear"></div>
   <div class="site-overview">
     <a style="text-transform: none;" href="<%- config.root %><%- config.about_dir %>">
       <div class="site-author">
