--- a/source/scss/slidebar.scss
+++ b/source/scss/slidebar.scss
@@ -68,7 +68,7 @@ html.sb-init.sb-active.sb-active-right .menu-icon .after {
 .sb-close {
   text-align: right;
   cursor: pointer;
-
+  float: right;
   .fa-close {
     color: #fff;
     padding: 10px 20px;
