feat: webpack init

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -17,6 +17,7 @@
   <% } else { %>
   <body class="post-template">
   <% } %>-->
+  <%- partial('casper/head') %>
   <body id="index" class="lightnav">
     <%- partial('casper/header') %>
     <%- body %>
