--- a/layout/casper/after_all.ejs
+++ b/layout/casper/after_all.ejs
@@ -14,4 +14,5 @@
     resizeHero();
   });
 </script>
-<script src="<%- config.root %>js/my.min.js"></script>
+<script src="<%- config.root %>js/base.min.js"></script>
+
