feat: webpack init

--- a/layout/casper/after_all.ejs
+++ b/layout/casper/after_all.ejs
@@ -14,5 +14,5 @@
     resizeHero();
   });
 </script>
-<script src="<%- config.root %>js/base.min.js"></script>
+<script src="<%- config.root %>js/dist/base.min.js"></script>
 
