--- a/layout/casper/head.ejs
+++ b/layout/casper/head.ejs
@@ -53,7 +53,7 @@
   <![endif]-->
 
   <!-- jQuery | Load our jQuery, with an alternative source fallback to a local version if request is unavailable -->
-  <script src="<%- config.root %>js/jquery-1.11.1.min.js"></script>
+  <script src="<%- config.root %>js/lib/jquery-1.11.1.min.js"></script>
   <!-- Load these in the <head> for quicker IE8+ load times -->
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
