--- a/layout/casper/post.ejs
+++ b/layout/casper/post.ejs
@@ -86,7 +86,7 @@
 <% if (page.mathjax){ %>
   <%- partial('post/mathjax') %>
 <% } %>
-<script src="/js/jquery.qrcode.min.js"></script>
+<script src="/js/lib/jquery.qrcode.min.js"></script>
 <script>
   $("#wechat").hover(function() {
     $("#qrcode").css('display','inline-block');
