--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -17,11 +17,11 @@
   <% } else { %>
   <body class="post-template">
   <% } %>-->
-  <head><link href="build/public/css/bundle.5c898db6.min.css" rel="stylesheet"></head>
+  <head><link href="/build/public/css/bundle.d33f9735.min.css" rel="stylesheet"></head>
   <body id="index" class="lightnav">
     <%- partial('casper/header') %>
     <%- body %>
     <%- partial('casper/footer') %>
     <%- partial('casper/after_all') %>
-  <script type="text/javascript" src="build/public/js/bundle.20c7b8ad.min.js"></script></body>
+  <script type="text/javascript" src="/build/public/js/bundle.180d2009.min.js"></script></body>
 </html>
