--- a/source/scss/projects.scss
+++ b/source/scss/projects.scss
@@ -31,7 +31,7 @@
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  padding: 20px;
+  padding: 20px 0;
   margin-bottom: 10px;
 }
 .projects .p-item .p-footer{
